# cuda-lecture-examples

./: .gitignore  CMakeLists.txt  readme.md
1-ArrayCopy/C++/: ArrayCopy.cpp  CMakeLists.txt
1-ArrayCopy/CUDA/: ArrayCopy.cu  CMakeLists.txt
2-MemoryManagement/: ArrayCopy.cu  CMakeLists.txt
3-SharedMemory/: CMakeLists.txt  SharedMemory.cu
4-AtomicReduction/: AtomicReduction.cu  CMakeLists.txt
5-CUB-Sort/: CMakeLists.txt  CUB-Sort.cu
6-ThrustMemoryManagement/: ArrayCopy.cu  CMakeLists.txt
7-MeasureRuntime/: ArrayCopy.cu  CMakeLists.txt
8-SystemWideOptimization/a-naive/: CMakeLists.txt  SystemWideOptimization.cu
8-SystemWideOptimization/b-optimized/: CMakeLists.txt  SystemWideOptimization.cu
9-MemoryAccessPattern/a-naive/: CMakeLists.txt  MemoryAccessPattern.cu
9-MemoryAccessPattern/b-optimized/: CMakeLists.txt  MemoryAccessPattern.cu
shared/: cudaErrorCheck.h  dataGenerator.h
